# likeness-vitals

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.sh
.ci/: py311_likeness_vitals_latest.yaml  py311_likeness_vitals_latest.yml  py311_likeness_vitals_min.yaml  py311_likeness_vitals_min.yml  py311_likeness_vitals_oldest.yaml  py312_likeness_vitals_dev.yaml  py312_likeness_vitals_dev.yml  py312_likeness_vitals_latest.yaml  py312_likeness_vitals_latest.yml  py313_likeness_vitals_latest.yaml  py314_likeness_vitals_dev.yaml  py314_likeness_vitals_latest.yaml
.github/workflows/: continuous_integration.yml
envs/: py312_likeness_gh.yml  py312_likeness_gh_cuda.yml  py313_likeness_gh.yml  py314_likeness_gh.yml
likeness_vitals/: __init__.py  constants.py  sg_ops.py  vitals.py
likeness_vitals/tests/: conftest.py  test_constants_deprecated.py  test_vitals_admin.py  test_vitals_admin_deprecated.py  test_vitals_idkeys.py  test_vitals_idkeys_deprecated.py  test_vitals_spatial.py  test_vitals_spatial_deprecated.py
